@@ -1,5 +1,9 @@
 2010-06-01  Rafael Espindola  <espindola@google.com>
 
+	* plugin.cc (Plugin::load): Pass the output name to the plugin.
+
+2010-06-01  Rafael Espindola  <espindola@google.com>
+
 	* plugin.cc (Sized_pluginobj::::do_add_symbols): Correctly set the
 	visibility of symbols.
 
